--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,7 +32,25 @@
 
 .hotel-view {
   background-color: #fff;
+  flex: 1;
+}
 
-  height: 80rem;
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--grayLight1);
+  border-bottom: 1px solid var(--grayLight2);
+}
+
+.description {
+  background-color: greenyellow;
+  font-size: 1.4rem;
+  flex: 0 0 60%;
+  padding: 3rem;
+  margin-right: 4.5rem;
+  box-shadow: var(--shadow-light);
+}
+.user-reviews {
+  background-color: orange;
   flex: 1;
 }
