Added more content stylings

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -28,7 +28,7 @@
 
   --grayLight1: #faf9f9;
   --grayLight2: #e0dede;
-  --grayLight3: #d8d7d7;
+  --grayLight3: #c2c0c0;
   --grayLight4: rgb(199, 196, 196);
 
   --grayDark1: #333;
