Finished everything but mobile changes

--- a/sass/main.css
+++ b/sass/main.css
@@ -102,6 +102,7 @@ body {
 }
 
 .detail {
+  font-size: 1.4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,7 +112,6 @@ body {
 }
 
 .description {
-  font-size: 1.4rem;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 60%;
           flex: 0 0 60%;
@@ -125,6 +125,16 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .logo {
@@ -426,18 +436,28 @@ body {
   display: inline-block;
   background-color: transparent;
   cursor: pointer;
-  -webkit-transition: all 2s;
-  transition: all 2s;
+  -webkit-transition: margin-left 2s;
+  transition: margin-left 2s;
 }
 
 .btn-inline:hover {
   color: var(--grayDark1);
 }
 
+.btn-inline:hover span {
+  margin-left: 8px;
+  -webkit-transition: margin-left .2s;
+  transition: margin-left .2s;
+}
+
 .btn-inline:focus {
   outline: none;
   -webkit-animation: pulsate 1s infinite;
           animation: pulsate 1s infinite;
+}
+
+.btn-inline span {
+  margin-left: 3px;
 }
 
 .paragraph:not(:last-of-type) {
@@ -504,6 +524,137 @@ body {
   margin-right: -1.5rem;
 }
 
+.review {
+  background-color: white;
+  -webkit-box-shadow: var(--shadow-light);
+          box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.review__text {
+  margin-bottom: 3rem;
+  z-index: 10;
+  position: relative;
+}
+
+.review__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.review__photo {
+  height: 4.5rem;
+  width: 4.5rem;
+  border-radius: 50%;
+  margin-right: 1.5rem;
+}
+
+.review__user-box {
+  margin-right: auto;
+}
+
+.review__user-name {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 4px;
+}
+
+.review__user-date {
+  font-size: 1rem;
+  color: var(--grayDark2);
+}
+
+.review__rating {
+  color: var(--primary);
+  font-size: 2.2rem;
+  font-weight: 400;
+}
+
+.review::before {
+  content: "\201C";
+  position: absolute;
+  top: -2.75rem;
+  left: -1rem;
+  line-height: 1;
+  font-size: 20rem;
+  color: var(--grayLight2);
+  font-family: sans-serif;
+  z-index: 1;
+}
+
+.cta {
+  padding: 3.5rem;
+  text-align: center;
+}
+
+.cta__book-now {
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 2.5rem;
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  background-image: -webkit-gradient(linear, left top, right top, from(var(--primary)), to(var(--primary-light)));
+  background-image: linear-gradient(to right, var(--primary), var(--primary-light));
+  color: white;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.btn > * {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.btn__visible {
+  padding: 2rem 7.5rem;
+}
+
+.btn__invisible {
+  position: absolute;
+  padding: 2rem 0;
+  left: 0;
+  top: -100%;
+}
+
+.btn:hover {
+  background-image: -webkit-gradient(linear, right top, left top, from(var(--primary)), to(var(--primary-light)));
+  background-image: linear-gradient(to left, var(--primary), var(--primary-light));
+}
+
+.btn:hover .btn__visible {
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+
+.btn:hover .btn__invisible {
+  top: 0;
+}
+
+.btn:focus {
+  outline: none;
+  -webkit-animation: pulsate 1s infinite;
+          animation: pulsate 1s infinite;
+}
+
 @-webkit-keyframes pulsate {
   0% {
     -webkit-transform: scale(1);
@@ -512,8 +663,8 @@ body {
             box-shadow: none;
   }
   50% {
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
     -webkit-box-shadow: 0 1rem 4rem rbga(0, 0, 0, 0.25);
             box-shadow: 0 1rem 4rem rbga(0, 0, 0, 0.25);
   }
@@ -533,8 +684,8 @@ body {
             box-shadow: none;
   }
   50% {
-    -webkit-transform: scale(1.5);
-            transform: scale(1.5);
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
     -webkit-box-shadow: 0 1rem 4rem rbga(0, 0, 0, 0.25);
             box-shadow: 0 1rem 4rem rbga(0, 0, 0, 0.25);
   }
