--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -262,6 +262,8 @@
   
 }
 
+//Button
+
 .btn-inline {
   border: none;
   color: var(--primary);
@@ -271,15 +273,24 @@
   display: inline-block;
   background-color: transparent;
   cursor: pointer;
-  transition: all 2s;
+  transition: margin-left 2s;
 
   &:hover {
     color: var(--grayDark1);
+
+    span {
+      margin-left: 8px;
+      transition: margin-left .2s;
+    }
   }
 
   &:focus {
     outline: none;
     animation: pulsate 1s infinite;
+  }
+
+  & span {
+    margin-left: 3px;
   }
 }
 
@@ -334,12 +345,6 @@
   align-items: center;
   justify-content: space-between;
 
-  &__count {
-  }
-
-  &__friends {
-
-  }
 
   &__photo {
     box-sizing: content-box;
@@ -354,6 +359,146 @@
   }
 }
 
+//Reviews
+
+.review {
+  background-color: white;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
+  // align-items: flex-start;
+
+  &__text{
+    margin-bottom: 3rem;
+    z-index: 10;
+    position: relative;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 4px;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--grayDark2);
+  }
+
+  &__rating {
+    color: var(--primary);
+    font-size: 2.2rem;
+    font-weight: 400;
+  }
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--grayLight2);
+    font-family: sans-serif;
+    z-index: 1;
+  }
+
+}
+
+
+//CTA
+
+.cta{
+  padding: 3.5rem;
+  text-align: center;
+
+  &__book-now {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 300;
+    margin-bottom: 2.5rem;
+
+   
+
+
+  }
+}
+
+//cta btn
+
+.btn {
+
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  background-image: linear-gradient(to right, var(--primary), var(--primary-light));
+  color: white;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all .2s;
+  }
+
+  &__visible {
+      padding: 2rem 7.5rem;
+      
+  }
+
+  &__invisible {
+    position: absolute;
+    padding: 2rem 0;
+    left: 0;
+    top: -100%;
+    
+  }
+
+  &:hover {
+    background-image: linear-gradient(to left, var(--primary), var(--primary-light));
+  }
+
+  &:hover  &__visible {
+    transform: translateY(100%);
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite
+  }
+}
+
 
 
 //Animations
@@ -365,7 +510,7 @@
   }
 
   50%{
-    transform: scale(1.5);
+    transform: scale(1.2);
     box-shadow: 0 1rem 4rem rbga(0,0,0, .25);
   }
 
