--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -36,6 +36,7 @@
 }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--grayLight1);
@@ -43,7 +44,6 @@
 }
 
 .description {
-  font-size: 1.4rem;
   flex: 0 0 60%;
   padding: 3rem;
   margin-right: 4.5rem;
@@ -51,4 +51,8 @@
 }
 .user-reviews {
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
