--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -39,6 +39,14 @@
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .25);
 }
 
+//Divide pixel size by 16
+$bp-largest: 75rem;       //1200 pixels
+$bp-large: 68.75rem;      //1100 pixels
+$bp-medium: 56.25rem;     //900 pixels
+$bp-medium: 37.5rem;     //600 pixels
+
+
+
 * {
   padding: 0;
   margin: 0;
@@ -53,6 +61,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+  @media  only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
