--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -121,12 +121,24 @@
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem;
+  
+  @media only screen and (max-width: $bp-medium){
+    display: flex;
+    margin: 0;
+  }
 
   &__item {
     position: relative;
+    @media only screen and (max-width: $bp-medium){
+      flex: 1;
+    }
 
     &:not(:last-child){
       margin-bottom: .5rem;
+
+      @media only screen and (max-width: $bp-medium){
+        margin: 0;
+      }
     }
   }
 
@@ -167,6 +179,11 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium){
+      justify-content: center;
+      padding: 2rem;
+    }
   }
 
   &__icon {
@@ -183,7 +200,11 @@
   font-size: 1.2 rem;
   text-align: center;
   padding: 2.5rem;
-  color: var(--grayLight3)
+  color: var(--grayLight3);
+
+  @media only screen and (max-width: $bp-medium){
+    display: none;
+  }
 }
 
 //Gallery 
@@ -345,6 +366,9 @@
   align-items: center;
   justify-content: space-between;
 
+  &__friends {
+    display: flex;
+  }
 
   &__photo {
     box-sizing: content-box;
@@ -353,8 +377,10 @@
     border-radius: 50%;
     border: 3px solid white;
 
+    
+
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -368,10 +394,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
-  // align-items: flex-start;
+
+  @media only screen and (max-width: $bp-medium){
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text{
     margin-bottom: 3rem;
@@ -434,14 +461,15 @@
   padding: 3.5rem;
   text-align: center;
 
+  @media only screen and (max-width: $bp-medium){
+    padding: 2.5rem 0;
+  }
+
   &__book-now {
     text-transform: uppercase;
     font-size: 2rem;
     font-weight: 300;
     margin-bottom: 2.5rem;
-
-   
-
 
   }
 }
