--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,6 +6,12 @@
 
   min-height: 80rem;
 
+  @media only screen and (max-width: $bp-largest){
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
+
 }
 
 .header {
@@ -20,6 +26,10 @@
 
 .content {
   display: flex;
+
+  @media only screen and (max-width: $bp-medium){
+   flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -41,6 +51,10 @@
   padding: 4.5rem;
   background-color: var(--grayLight1);
   border-bottom: 1px solid var(--grayLight2);
+
+  @media only screen and (max-width: $bp-medium){
+    padding: 3rem;
+  }
 }
 
 .description {
@@ -48,6 +62,11 @@
   padding: 3rem;
   margin-right: 4.5rem;
   box-shadow: var(--shadow-light);
+
+  @media only screen and (max-width: $bp-medium){
+    padding: 2rem;
+    margin-right: 3rem;
+  }
 }
 .user-reviews {
   flex: 1;
