--- a/sass/main.css
+++ b/sass/main.css
@@ -34,6 +34,12 @@ html {
   font-size: 62.5%;
 }
 
+@media only screen and (max-width: 68.75rem) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: 400;
@@ -53,6 +59,14 @@ body {
   -webkit-box-shadow: var(--shadow-dark);
           box-shadow: var(--shadow-dark);
   min-height: 80rem;
+}
+
+@media only screen and (max-width: 75rem) {
+  .container {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .header {
@@ -75,6 +89,15 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -111,6 +134,12 @@ body {
   border-bottom: 1px solid var(--grayLight2);
 }
 
+@media only screen and (max-width: 37.5rem) {
+  .detail {
+    padding: 3rem;
+  }
+}
+
 .description {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 60%;
@@ -119,6 +148,13 @@ body {
   margin-right: 4.5rem;
   -webkit-box-shadow: var(--shadow-light);
           box-shadow: var(--shadow-light);
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .description {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
 }
 
 .user-reviews {
@@ -276,12 +312,35 @@ body {
   margin-top: 3.5rem;
 }
 
+@media only screen and (max-width: 37.5rem) {
+  .side-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+  }
+}
+
 .side-nav__item {
   position: relative;
 }
 
+@media only screen and (max-width: 37.5rem) {
+  .side-nav__item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+}
+
 .side-nav__item:not(:last-child) {
   margin-bottom: .5rem;
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .side-nav__item:not(:last-child) {
+    margin: 0;
+  }
 }
 
 .side-nav__item::before {
@@ -327,6 +386,15 @@ body {
           align-items: center;
 }
 
+@media only screen and (max-width: 37.5rem) {
+  .side-nav__link, .side-nav__link:visited {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 2rem;
+  }
+}
+
 .side-nav__icon {
   width: 1.75rem;
   height: 1.75rem;
@@ -339,6 +407,12 @@ body {
   text-align: center;
   padding: 2.5rem;
   color: var(--grayLight3);
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .legal {
+    display: none;
+  }
 }
 
 .gallery {
@@ -511,6 +585,12 @@ body {
           justify-content: space-between;
 }
 
+.recommend__friends {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .recommend__photo {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -521,7 +601,7 @@ body {
 }
 
 .recommend__photo:not(:last-child) {
-  margin-right: -1.5rem;
+  margin-right: -2rem;
 }
 
 .review {
@@ -532,6 +612,13 @@ body {
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .review {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 }
 
 .review__text {
@@ -593,6 +680,12 @@ body {
 .cta {
   padding: 3.5rem;
   text-align: center;
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .cta {
+    padding: 2.5rem 0;
+  }
 }
 
 .cta__book-now {
